--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Expert.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Expert.cshtml
@@ -25,7 +25,7 @@
 <body style="background:#F4F4F5;">
 
     <header class="hjc_header">
-        <a href="/List/Index" class="hjc_back"></a>
+        <a href="/Home/Index" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">高手榜</a>
     </header>
 
@@ -109,7 +109,7 @@
     </div>
 
     <ul class="C8_nav6 C8_bang">
-            <li data-idx="day" class="current">
+            <li data-idx="day">
                 <a href="javascript:;">
                     <p>日榜</p><span></span>
                 </a>
@@ -124,7 +124,7 @@
                     <p>月榜</p><span></span>
                 </a>
             </li>
-            <li data-idx="all">
+            <li data-idx="all"  class="current">
                 <a href="javascript:;">
                     <p>总榜</p><span></span>
                 </a>
