--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Index.cshtml
@@ -18,7 +18,7 @@
 <body style="background:#F4F4F5;">
 
     <header class="hjc_header">
-        <a href="javascript:history.go(-1);" class="hjc_back"></a>
+        <a href="/Home/Index" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">排行榜</a>
     </header>
 
