--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Gratuity.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Gratuity.cshtml
@@ -33,7 +33,7 @@
 
             $(".hdNav_cai_lhs li").click(function ()
             {
-                $(".C8_bang").find("li").first().addClass("current").siblings().removeClass("current");
+                $(".C8_bang").find("li").last().addClass("current").siblings().removeClass("current");
                 var _this = $(this);
                 var pid = _this.attr("data-pid");
                 
@@ -46,7 +46,7 @@
 
             $(".hdNav_cai li").click(function ()
             {
-                $(".C8_bang").find("li").first().addClass("current").siblings().removeClass("current");
+                $(".C8_bang").find("li").last().addClass("current").siblings().removeClass("current");
                 var _this = $(this);
                 var pid = _this.attr("data-pid");
 
@@ -58,7 +58,7 @@
 
             $(".GS_box li").on('click', function ()
             {
-                $(".C8_bang").find("li").first().addClass("current").siblings().removeClass("current");
+                $(".C8_bang").find("li").last().addClass("current").siblings().removeClass("current");
 
                 var pid = $(".hdNav_cai_lhs .current").attr("data-pid");
                 var _this = $(this);
