--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Profit.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Profit.cshtml
@@ -34,7 +34,7 @@
 
             $(".hdNav_cai_lhs li").click(function ()
             {
-                $(".C8_bang").find("li").first().addClass("current").siblings().removeClass("current");
+                $(".C8_bang").find("li").last().addClass("current").siblings().removeClass("current");
                 var _this = $(this);
                 var pid = _this.attr("data-pid");
 
@@ -47,7 +47,7 @@
 
 
             $(".hdNav_cai li").click(function () {
-                $(".C8_bang").find("li").first().addClass("current").siblings().removeClass("current");
+                $(".C8_bang").find("li").last().addClass("current").siblings().removeClass("current");
                 var _this = $(this);
                 var pid = _this.attr("data-pid");
 
@@ -59,7 +59,7 @@
 
             $(".GS_box li").on('click', function ()
             {
-                $(".C8_bang").find("li").first().addClass("current").siblings().removeClass("current");
+                $(".C8_bang").find("li").last().addClass("current").siblings().removeClass("current");
 
                 var pid = $(".hdNav_cai_lhs .current").attr("data-pid");
                 var _this = $(this);
@@ -363,7 +363,7 @@
 
 
     <ul class="C8_nav6 C8_bang">
-        <li data-idx="day" class="current">
+        <li data-idx="day">
             <a href="javascript:;">
                 <p>日榜</p><span></span>
             </a>
@@ -378,7 +378,7 @@
                 <p>月榜</p><span></span>
             </a>
         </li>
-        <li data-idx="all">
+        <li  class="current" data-idx="all">
             <a href="javascript:;">
                 <p>总榜</p><span></span>
             </a>
