--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Integral.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Integral.cshtml
@@ -194,7 +194,7 @@
 
     <div class="guessing_header">
         <ul class="C8_nav2 C8_bang">
-            <li data-idx="day" class="current">
+            <li data-idx="day" >
                 <a href="javascript:;">
                     <p>日榜</p><span></span>
                 </a>
@@ -209,7 +209,7 @@
                     <p>月榜</p><span></span>
                 </a>
             </li>
-            <li data-idx="all">
+            <li data-idx="all" class="current">
                 <a href="javascript:;">
                     <p>总榜</p><span></span>
                 </a>
