--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/FansBang.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/FansBang.cshtml
@@ -28,10 +28,10 @@
 
     <div class="guessing_header">
         <ul class="C8_nav2 C8_bang">
-            <li class="current" data-type="day" data-id="1" data-pageIndex="1" data-pageSize="100"><a href="javascript:;"><p>日榜</p><span></span></a></li>
+            <li  data-type="day" data-id="1" data-pageIndex="1" data-pageSize="100"><a href="javascript:;"><p>日榜</p><span></span></a></li>
             <li data-id="2" data-type="week" data-pageIndex="1" data-pageSize="100"><a href="javascript:;"><p>周榜</p><span></span></a></li>
             <li data-id="3" data-type="month" data-pageIndex="1" data-pageSize="100"><a href="javascript:;"><p>月榜</p><span></span></a></li>
-            <li data-id="4" data-type="all" data-pageIndex="1" data-pageSize="100"><a href="javascript:;"><p>总榜</p><span></span></a></li>
+            <li class="current" data-id="4" data-type="all" data-pageIndex="1" data-pageSize="100"><a href="javascript:;"><p>总榜</p><span></span></a></li>
             <div style="clear:both;"></div>
         </ul>
     </div>
