--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Gratuity.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Gratuity.cshtml
@@ -362,7 +362,7 @@
 
 
     <ul class="C8_nav6 C8_bang">
-        <li data-idx="day" class="current">
+        <li data-idx="day" >
             <a href="javascript:;">
                 <p>日榜</p><span></span>
             </a>
@@ -377,7 +377,7 @@
                 <p>月榜</p><span></span>
             </a>
         </li>
-        <li data-idx="all">
+        <li data-idx="all" class="current">
             <a href="javascript:;">
                 <p>总榜</p><span></span>
             </a>
