修复快乐十二注数bug

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Post.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Post.cshtml
@@ -1110,7 +1110,7 @@
 
     @RenderPage("../Public/Tan.cshtml")
 
-    <script type="text/javascript" src="/js/luo/play.js"></script>
+    <script type="text/javascript" src="/js/luo/play.js?20180425"></script>
 
     <script>
 
