--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Plan.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Plan.cshtml
@@ -44,10 +44,10 @@
                 </ul>
             </div>
             <div class="hdNav_cai_expand" style="display:none">
-                <div class="hdNav_cai_title">
+                @*<div class="hdNav_cai_title">
                     <span>切换分类</span>
                     <span class="collect"><img src="/images/icon-collect.png"  alt=""/></span>
-                </div>
+                </div>*@
                 <ul class="hdNav_cai">
 
                     @foreach (LotteryType2 lotteryType in ViewBag.list)
