--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Gratuity.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Gratuity.cshtml
@@ -279,10 +279,10 @@
             </ul>
         </div>
         <div class="hdNav_cai_expand" style="display:none">
-            <div class="hdNav_cai_title">
+            @*<div class="hdNav_cai_title">
                 <span>切换分类</span>
                 <span class="collect"><img src="~/images/icon-collect.png" alt="" /></span>
-            </div>
+            </div>*@
             <ul class="hdNav_cai">
                 @foreach (var item in TypeList)
                 {
@@ -585,6 +585,7 @@
         </dl>
     </div>
 
+    <div class="mask" style="display:none;"></div>
 </body>
 
 </html>
