--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Profit.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Profit.cshtml
@@ -280,10 +280,10 @@
             </ul>
         </div>
         <div class="hdNav_cai_expand" style="display:none">
-            <div class="hdNav_cai_title">
+            @*<div class="hdNav_cai_title">
                 <span>切换分类</span>
                 <span class="collect"><img src="~/images/icon-collect.png" alt="" /></span>
-            </div>
+            </div>*@
             <ul class="hdNav_cai">
                 @foreach (var item in TypeList)
                 {
@@ -586,6 +586,8 @@
         </dl>
     </div>
 
+
+    <div class="mask" style="display:none;"></div>
 </body>
 
 </html>
