--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/TakeBet.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/TakeBet.cshtml
@@ -60,10 +60,10 @@
             </ul>
         </div>
         <div class="hdNav_cai_expand" style="display:none">
-            <div class="hdNav_cai_title">
+            @*<div class="hdNav_cai_title">
                 <span>切换分类</span>
                 <span class="collect"><img src="~/images/icon-collect.png" alt="" /></span>
-            </div>
+            </div>*@
             <ul class="hdNav_cai">
              
                 @if (Model != null)
