--- a/C8.Lottery.Portal/C8.Lottery.Portal/css/paper.css
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/css/paper.css
@@ -556,8 +556,8 @@
 }
 
 .slick-slide img {
-    /*width: 90%;*/
-	height:160px;
+    width: 90%;
+	/*height:160px;*/
     margin: .1rem auto .4rem;
    /* min-height: 2rem;*/
 }
