--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Expert.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Expert.cshtml
@@ -53,10 +53,10 @@
             <div style="clear:both;"></div>
         </div>
         <div class="hdNav_cai_expand" style="display:none">
-            <div class="hdNav_cai_title">
+            @*<div class="hdNav_cai_title">
                 <span>切换分类</span>
                 <span class="collect"><img src="/images/icon-collect.png" alt="" /></span>
-            </div>
+            </div>*@
             <ul class="hdNav_cai">
                 @if (typeList != null)
                 {
@@ -134,6 +134,8 @@
 
     @Html.Action("ExpertData", new { id = @Model.Id })
 
+
+    <div class="mask" style="display: none;"></div>
     <script>
         $(function ()
         {
