--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
@@ -64,7 +64,7 @@
 
         <header class="hjc_header">
             <a href="javascript:history.go(-1);" class="hjc_back"></a>
-            <a href="javascript:;" class="hjc_logo">@Model.TypeName</a>
+            <a href="javascript:;" class="hjc_logo  hjc_HeaderXL">@Model.TypeName</a>
             <a href="/Home/Index" class="hjc_home_right"></a>
         </header>
     }
@@ -72,7 +72,7 @@
     {
         <header class="hjc_header">
             <a href="javascript:history.go(-1);" class="hjc_back"></a>
-            <a href="javascript:;" class="hjc_logo">@Model.TypeName<span class="select_sign"></span></a>
+            <a href="javascript:;" class="hjc_logo hjc_HeaderXL">@Model.TypeName<span class="select_sign"></span></a>
             <a href="/Home/Index" class="hjc_home_right"></a>
         </header>
 
@@ -286,6 +286,7 @@
         }
     </div>
     <div class="mask" style="display:none;"></div>
+    <div class="mask2" style="display:none;"></div>
 
     @if (lType == 5)
     {
