--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/TypeList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/TypeList.cshtml
@@ -37,7 +37,7 @@
 
     <header class="hjc_header">
         <a href="javascript:history.go(-1)" class="hjc_back"></a>
-        <a href="javascript:;" class="hjc_logo">@Model.TypeName<span class="select_sign"></span></a>
+        <a href="javascript:;" class="hjc_logo  hjc_HeaderXL">@Model.TypeName<span class="select_sign"></span></a>
         <a href="/Home/Index" class="hjc_home_right"></a>
     </header>
 
@@ -248,6 +248,7 @@
     </div>
 
     <div class="mask" style="display:none;"></div>
+    <div class="mask2" style="display:none;"></div>
 
     <script type="text/javascript">
         var url = "@socketUrl/LhcHandler.ashx";
