--- a/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
@@ -715,7 +715,7 @@ a {
 }
 
 .hdM_ddtit .hdM_ddtime {
-    font-size: 15px;
+    font-size: 13px;
     color: #4f4f4f;
     line-height: 24px;
 }
@@ -2841,7 +2841,7 @@ a {
     background: #fff;
     border-top: 1px solid #eee;
     padding: 10px 2%;
-    z-index: 9999;
+    z-index: 900;
 }
 
 .Rank_ftDL {
@@ -6706,6 +6706,17 @@ a {
     -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
     filter: alpha(opacity=0);
     z-index: 998;
+}
+.mask2 {
+    top: 0;
+    left: 0;
+    position: fixed;
+    background-color: rgba(47, 48, 49, 0.7);
+    width: 100%;
+    height: 100%;
+    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    z-index: 999;
 }
 
 .list_mainUl2 {
