--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Gratuity.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Gratuity.cshtml
@@ -137,7 +137,7 @@
                         +'<td width="33%" align="center" valign="middle">'
                           +' <div class="Ranking_Blogotu2">'
                             +' <div class="Ranking_B2tu"> '
-                            + '<a href="/Plan/PlayRecord/' + ltype + '?uid=' + value.UserId + '&type=1"><img src="' + (value.Avater.length <= 0 ? '/images/default_avater.png' : value.Avater) + '"></a>'
+                            + '<a href="/Plan/PlayRecord/' + ltype + '?uid=' + value.UserId + '&type=1"><img src="' + (value.Avater == null ? '/images/default_avater.png' : value.Avater) + '"></a>'
                            +' </div>'
                         + ' <img src="' + gettop3img(value.Rank) + '" class="Ranking_PHtu">'
                         +' </div>'
@@ -150,7 +150,7 @@
                  tr = '<tr><td align="center" valign="middle"> <p>'+value.Rank+'</p></td>'
                   + '<td width="15%" align="center" valign="middle">'
                   + ' <div class="Ranking_Blogotu">'
-                  + '  <a href="/Plan/PlayRecord/' + ltype + '?uid=' + value.UserId + '&type=1"><img src="' + (value.Avater.length <= 0 ? '/images/default_avater.png' : value.Avater) + '"></a>  </div>'
+                  + '  <a href="/Plan/PlayRecord/' + ltype + '?uid=' + value.UserId + '&type=1"><img src="' + (value.Avater == null ? '/images/default_avater.png' : value.Avater) + '"></a>  </div>'
                   + '   </td> <td align="left" valign="middle">'
                   + '   <p class="Ysfont"><a href="javascript:;">' + value.NickName + '</a></p>'
                   + ' </td> <td width="25%" align="center" valign="middle"><span class="Ds_money">' + value.Money + '</span></td>'
@@ -170,7 +170,7 @@
                      tr= '<tr>' + tdrank
                     + '<td width="15%" align="center" valign="middle">'
                     + ' <div class="Ranking_Blogotu">'
-                    + '  <a href="/Plan/PlayRecord/' + ltype + '?uid=' + value.UserId + '&type=1"><img src="' + (value.Avater.length <= 0 ? '/images/default_avater.png' : value.Avater) + '"></a>  </div>'
+                    + '  <a href="/Plan/PlayRecord/' + ltype + '?uid=' + value.UserId + '&type=1"><img src="' + (value.Avater == null ? '/images/default_avater.png' : value.Avater) + '"></a>  </div>'
                     + '   </td> <td align="left" valign="middle">'
                     + '   <p class="Ysfont"><a href="javascript:;">' + value.NickName + '</a></p>'
                     + ' </td> <td width="25%" align="center" valign="middle"><span class="Ds_money">' + value.Money + '</span></td>'
