--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/GetIntegralRule.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/GetIntegralRule.cshtml
@@ -6,7 +6,7 @@
 }
 
 
-<div class="Grades_TopNav"  style="max-height:200px;overflow-y: scroll;">
+<div class="Grades_TopNav"  style="max-height:145px;overflow-x:hidden;">
     <!--六合彩-->
     <ul class="Grades_TNul" id="gul_@ltype">
 
