--- a/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
@@ -634,7 +634,7 @@ a {
     color: #646464;
     padding: 0 7px;
     border: 1px solid #d9d9d9;
-    margin-right: 3px;
+    margin:0 3px 5px 0;
     border-radius: 4px;
 }
 
@@ -6983,7 +6983,7 @@ a {
 }
 
 .UL2_bd {
-    padding: 5px 10px 10px 10px;
+    padding: 5px 10px 5px 10px;
 }
 
 .UL3_bdinfo3 .UL2_baif3a {
